name:                shell
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable cat
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , directory
                     , split
